really get rid of non-critical exceptions during application startup